# booktrack

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  lighthouserc.json  package-lock.json  package.json  pyproject.toml  quality_automation.sh  run_test_workflow.sh  test.sh
.github/workflows/: ci.yml
analysis/: bandit.html  docker_scan.txt  flake8.txt  health_check.ps1  radon.txt  readme.md  steps.txt  tests_log.txt
analysis/locust/: locust_stats.csv  locust_stats_history.csv
backend/: Dockerfile  config.yml  dev.db  locustfile.py  main.py  pyproject.toml  run_backend.sh  test_sample.py
backend/alembic/versions/: 918fea2d8843_.py  9b6029722315_.py  d4450dd92201_.py
backend/config/: config.py
backend/core/: __init__.py  database.py  logging.py
backend/core/catalog/: crud.py  models.py  schemas.py
backend/core/favourites/: crud.py  models.py  schemas.py
backend/core/reading_list/: crud.py  models.py  schemas.py
backend/core/users/: crud.py  models.py  schemas.py
backend/dependencies/: dependencies.py
backend/patterns/: singleton.py
backend/routers/: __init__.py  catalog.py  favourites.py  reading_list.py  users.py
backend/services/: __init__.py  catalog.py  favourites.py  reading_list.py  users.py
backend/tests/api/catalog/: test_catalog_api.py
backend/tests/api/favourites/: test_favourites_api.py
backend/tests/api/reading-list/: test_reading_list_api.py
backend/tests/api/users/: test_users_api.py
backend/tests/fuzz/: test_catalog_fuzz.py  test_favourites_fuzz.py  test_reading_list_fuzz.py  test_token_fuzz.py
backend/tests/unit/: test_favourites.py  test_logging.py  test_reading_list.py  test_users.py
backend/util/: __init__.py  auth.py  token.py  users.py
docs/: validation_report.txt
docs/quality/: quality_automation_report.txt
docs/quality/maintainability/: coverage_backend.txt  coverage_frontend.txt  fuzz_tests.txt  maintainability_index.txt  mutation.txt
docs/quality/performance/lighthouse/: manifest.json
docs/quality/performance/locust/: report_failures.csv  report_stats.csv  report_stats_history.csv
docs/quality/security/: bandit.txt  bandit_report.txt
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt  run_frontend.sh
frontend/app/: api_client.py  config.py  main.py  state.py
frontend/app/components/: book_card.py  dashboard.py  details.py  favourites.py  reading_list.py  search.py
frontend/tests/integration/: test_app_flow.py
frontend/tests/unit/: test_api_client.py  test_app.py  test_book_card.py  test_config.py  test_details_page.py  test_reading_list.py  test_search_page.py  test_state.py
nginx/conf.d/: default.conf
