[project]
name = "booktrack-backend"
version = "0.1.0"
description = "This is the backend repository for the BookTrack application as part of the SQR course project"
authors = [
    {name = "LouayFarah",email = "louayfarahioi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pyaml-env (>=1.2.2,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic-utils (>=0.8.8,<0.9.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "pytest-selenium (>=4.1.0,<5.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "mutmut (>=3.2.3,<4.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "locust (>=2.37.1,<3.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "hypothesis (>=6.131.15,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mutmut]
paths_to_mutate = [ "core/favourites/crud.py", "core/reading_list/crud.py", "core/users/crud.py"]
tests_dir = [ "tests/" ]
also_copy = ["config/", "patterns/", "util/", "config.yml", "logs", "core/database.py", "core/logging.py", "core/__init__.py", "core/users/models.py", "core/users/schemas.py", "core/users/__init__.py", "core/favourites/models.py", "core/favourites/schemas.py","core/favourites/__init__.py", "core/reading_list/models.py", "core/reading_list/schemas.py", "core/reading_list/__init__.py", "core/catalog/"]